Local caching with indexeddb for notifications.

--- a/popup.html
+++ b/popup.html
@@ -63,10 +63,11 @@
 			</div>
 		{{/list}}
 	</script>
-	<script src="assets/auth.js"></script>
+	<script src="assets/config.js"></script>
 	<script src="oauth2/oauth2.js"></script>
 	<script src="oauth2/adapters/github.js"></script>
 	<script src="assets/ruto.js"></script>
+	<script src="assets/db.js"></script>
 	<script src="assets/mustache.js"></script>
 	<script src="assets/moment.js"></script>
 	<script src="assets/popup.js"></script>
