Having fun with a floating octocat.

--- a/popup.html
+++ b/popup.html
@@ -15,8 +15,9 @@
 			<div class="blank-state">
 				<h1>No unread notifications.</h1>
 				<p>Good job!</p>
-				<a href="http://octodex.github.com/" target="_blank" title="octodex.github.com">
-					<img src="icons/icon-128.png" width="128" height="128" alt=""><br>
+				<a href="http://octodex.github.com/" target="_blank" title="octodex.github.com" class="octo-state">
+					<img src="icons/icon-128.png" width="128" height="128" alt="">
+					<span class="shadow"></span>
 				</a>
 			</div>
 		</div>
