--- a/popup.html
+++ b/popup.html
@@ -35,7 +35,7 @@
 		<a href="#" class="mini-button close-dialog" id="cancel-mark-everything-read">Not sure</a>
 	</div>
 	<div class="dialog" id="dialog-error">
-		<p>Uh-oh, an unexpected error occured. Please try again.</p>
+		<p>Uh-oh, an unexpected error occurred. Please try again.</p>
 		<a href="#" class="mini-button close-dialog">Okay</a>
 	</div>
 	<div id="cover"></div>
